--- a/dataset/Untitled.ipynb
+++ b/dataset/Untitled.ipynb
@@ -2870,6 +2870,229 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('final_file.csv',encoding=\"GBK\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>shop_id</th>\n",
+       "      <th>date.day_1</th>\n",
+       "      <th>date.day_2</th>\n",
+       "      <th>date.day_3</th>\n",
+       "      <th>date.day_4</th>\n",
+       "      <th>date.day_5</th>\n",
+       "      <th>date.day_6</th>\n",
+       "      <th>date.day_7</th>\n",
+       "      <th>date.day_8</th>\n",
+       "      <th>...</th>\n",
+       "      <th>cate_2_name_快餐</th>\n",
+       "      <th>cate_2_name_本地购物</th>\n",
+       "      <th>cate_2_name_汤/粥/煲/砂锅/炖菜</th>\n",
+       "      <th>cate_2_name_火锅</th>\n",
+       "      <th>cate_2_name_烘焙糕点</th>\n",
+       "      <th>cate_2_name_烧烤</th>\n",
+       "      <th>cate_2_name_网吧网咖</th>\n",
+       "      <th>cate_2_name_药店</th>\n",
+       "      <th>cate_2_name_超市</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>544</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>221</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>810</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>163</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1977</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>137</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>746</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>68</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 218 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  shop_id  date.day_1  date.day_2  date.day_3  date.day_4  \\\n",
+       "0           0      544           0           0           0           0   \n",
+       "1           1      810           0           0           0           0   \n",
+       "2           2      163           0           0           0           0   \n",
+       "3           3     1977           0           0           0           0   \n",
+       "4           4      746           0           0           0           0   \n",
+       "\n",
+       "   date.day_5  date.day_6  date.day_7  date.day_8  ...    cate_2_name_快餐  \\\n",
+       "0           0           0           0           0  ...                 0   \n",
+       "1           0           0           0           0  ...                 1   \n",
+       "2           0           0           1           0  ...                 0   \n",
+       "3           0           0           0           0  ...                 1   \n",
+       "4           0           0           0           0  ...                 1   \n",
+       "\n",
+       "   cate_2_name_本地购物  cate_2_name_汤/粥/煲/砂锅/炖菜  cate_2_name_火锅  \\\n",
+       "0                 0                        0               0   \n",
+       "1                 0                        0               0   \n",
+       "2                 0                        0               0   \n",
+       "3                 0                        0               0   \n",
+       "4                 0                        0               0   \n",
+       "\n",
+       "   cate_2_name_烘焙糕点  cate_2_name_烧烤  cate_2_name_网吧网咖  cate_2_name_药店  \\\n",
+       "0                 0               0                 0               0   \n",
+       "1                 0               0                 0               0   \n",
+       "2                 0               0                 0               0   \n",
+       "3                 0               0                 0               0   \n",
+       "4                 0               0                 0               0   \n",
+       "\n",
+       "   cate_2_name_超市  count  \n",
+       "0               0    221  \n",
+       "1               0    125  \n",
+       "2               1     91  \n",
+       "3               0    137  \n",
+       "4               0     68  \n",
+       "\n",
+       "[5 rows x 218 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
