--- a/dataset/FIles_preprocessing.ipynb
+++ b/dataset/FIles_preprocessing.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -351,6 +351,505 @@
    "outputs": [],
    "source": [
     "pred_file.to_csv('predictions.csv', encoding=\"GBK\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pred_file = pd.read_csv('predictions.csv', encoding=\"GBK\").drop(['Unnamed: 0'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pred_file1 = pred_file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "pred_file_1629 = pred_file[pred_file['shop_id']==1629]\n",
+    "pred_file_58 = pred_file[pred_file['shop_id']==58]\n",
+    "pred_file_1821 = pred_file[pred_file['shop_id']==1821]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>shop_id</th>\n",
+       "      <th>date.day_1</th>\n",
+       "      <th>date.day_2</th>\n",
+       "      <th>date.day_3</th>\n",
+       "      <th>date.day_4</th>\n",
+       "      <th>date.day_5</th>\n",
+       "      <th>date.day_6</th>\n",
+       "      <th>date.day_7</th>\n",
+       "      <th>date.day_8</th>\n",
+       "      <th>date.day_9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>date.month_2</th>\n",
+       "      <th>date.month_3</th>\n",
+       "      <th>date.month_4</th>\n",
+       "      <th>date.month_5</th>\n",
+       "      <th>date.month_6</th>\n",
+       "      <th>date.month_7</th>\n",
+       "      <th>date.month_8</th>\n",
+       "      <th>date.month_9</th>\n",
+       "      <th>date.month_10</th>\n",
+       "      <th>date.month_12</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1511</th>\n",
+       "      <td>1629</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3365</th>\n",
+       "      <td>1629</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5219</th>\n",
+       "      <td>1629</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7073</th>\n",
+       "      <td>1629</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8927</th>\n",
+       "      <td>1629</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10781</th>\n",
+       "      <td>1629</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12635</th>\n",
+       "      <td>1629</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14489</th>\n",
+       "      <td>1629</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16343</th>\n",
+       "      <td>1629</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18197</th>\n",
+       "      <td>1629</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20051</th>\n",
+       "      <td>1629</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21905</th>\n",
+       "      <td>1629</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23759</th>\n",
+       "      <td>1629</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25613</th>\n",
+       "      <td>1629</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>14 rows × 216 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       shop_id  date.day_1  date.day_2  date.day_3  date.day_4  date.day_5  \\\n",
+       "1511      1629         1.0         0.0         0.0         0.0         0.0   \n",
+       "3365      1629         0.0         1.0         0.0         0.0         0.0   \n",
+       "5219      1629         0.0         0.0         1.0         0.0         0.0   \n",
+       "7073      1629         0.0         0.0         0.0         1.0         0.0   \n",
+       "8927      1629         0.0         0.0         0.0         0.0         1.0   \n",
+       "10781     1629         0.0         0.0         0.0         0.0         0.0   \n",
+       "12635     1629         0.0         0.0         0.0         0.0         0.0   \n",
+       "14489     1629         0.0         0.0         0.0         0.0         0.0   \n",
+       "16343     1629         0.0         0.0         0.0         0.0         0.0   \n",
+       "18197     1629         0.0         0.0         0.0         0.0         0.0   \n",
+       "20051     1629         0.0         0.0         0.0         0.0         0.0   \n",
+       "21905     1629         0.0         0.0         0.0         0.0         0.0   \n",
+       "23759     1629         0.0         0.0         0.0         0.0         0.0   \n",
+       "25613     1629         0.0         0.0         0.0         0.0         0.0   \n",
+       "\n",
+       "       date.day_6  date.day_7  date.day_8  date.day_9      ...        \\\n",
+       "1511          0.0         0.0         0.0         0.0      ...         \n",
+       "3365          0.0         0.0         0.0         0.0      ...         \n",
+       "5219          0.0         0.0         0.0         0.0      ...         \n",
+       "7073          0.0         0.0         0.0         0.0      ...         \n",
+       "8927          0.0         0.0         0.0         0.0      ...         \n",
+       "10781         1.0         0.0         0.0         0.0      ...         \n",
+       "12635         0.0         1.0         0.0         0.0      ...         \n",
+       "14489         0.0         0.0         1.0         0.0      ...         \n",
+       "16343         0.0         0.0         0.0         1.0      ...         \n",
+       "18197         0.0         0.0         0.0         0.0      ...         \n",
+       "20051         0.0         0.0         0.0         0.0      ...         \n",
+       "21905         0.0         0.0         0.0         0.0      ...         \n",
+       "23759         0.0         0.0         0.0         0.0      ...         \n",
+       "25613         0.0         0.0         0.0         0.0      ...         \n",
+       "\n",
+       "       date.month_2  date.month_3  date.month_4  date.month_5  date.month_6  \\\n",
+       "1511              0             0             0             0             0   \n",
+       "3365              0             0             0             0             0   \n",
+       "5219              0             0             0             0             0   \n",
+       "7073              0             0             0             0             0   \n",
+       "8927              0             0             0             0             0   \n",
+       "10781             0             0             0             0             0   \n",
+       "12635             0             0             0             0             0   \n",
+       "14489             0             0             0             0             0   \n",
+       "16343             0             0             0             0             0   \n",
+       "18197             0             0             0             0             0   \n",
+       "20051             0             0             0             0             0   \n",
+       "21905             0             0             0             0             0   \n",
+       "23759             0             0             0             0             0   \n",
+       "25613             0             0             0             0             0   \n",
+       "\n",
+       "       date.month_7  date.month_8  date.month_9  date.month_10  date.month_12  \n",
+       "1511              0             0             0              0              0  \n",
+       "3365              0             0             0              0              0  \n",
+       "5219              0             0             0              0              0  \n",
+       "7073              0             0             0              0              0  \n",
+       "8927              0             0             0              0              0  \n",
+       "10781             0             0             0              0              0  \n",
+       "12635             0             0             0              0              0  \n",
+       "14489             0             0             0              0              0  \n",
+       "16343             0             0             0              0              0  \n",
+       "18197             0             0             0              0              0  \n",
+       "20051             0             0             0              0              0  \n",
+       "21905             0             0             0              0              0  \n",
+       "23759             0             0             0              0              0  \n",
+       "25613             0             0             0              0              0  \n",
+       "\n",
+       "[14 rows x 216 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred_file_1629"
    ]
   },
   {
