--- a/dataset/xgboost_implementation_1.ipynb
+++ b/dataset/xgboost_implementation_1.ipynb
@@ -2,20 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda/anaconda2/lib/python2.7/site-packages/sklearn/cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
-      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -24,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -379,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -393,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -407,6 +398,65 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "average_r2 0.62050130956\n",
+      "average_mse 6583.3831421\n",
+      "median_r2 0.619683662447\n",
+      "median_mse 6666.51649687\n"
+     ]
+    }
+   ],
+   "source": [
+    "r2_results = []\n",
+    "mse_results= []\n",
+    "kf_total = KFold(n_splits=20, shuffle=True, random_state=100)\n",
+    "for train_index, test_index in kf_total.split(X):\n",
+    "    x_tr, x_cv = X[train_index], X[test_index]\n",
+    "    y_tr, y_cv = Y[train_index], Y[test_index]\n",
+    "    T_train_xgb = xgb.DMatrix(x_tr, y_tr)\n",
+    "    params_1 = {\"booster\":\"gbtree\", \"objective\": \"reg:linear\", \"eta\":0.1, \"max_depth\":40,\"eval_metric\":\"rmse\", 'lambda': 5}\n",
+    "    gbm_p_1 = xgb.train(dtrain=T_train_xgb,params=params_1)\n",
+    "    y_pr = gbm_p_1.predict(xgb.DMatrix(x_cv))\n",
+    "    r2_results.append(r2_score(y_cv, y_pr))\n",
+    "    mse_results.append(mean_squared_error(y_cv, y_pr))\n",
+    "print 'average_r2', np.average(r2_results)\n",
+    "print 'average_mse', np.average(mse_results)\n",
+    "print 'median_r2', np.median(r2_results)\n",
+    "print 'median_mse', np.median(mse_results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.643371327907\n",
+      "6097.39510445\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = gbm_p_1.predict(xgb.DMatrix(X_test))\n",
+    "print(r2_score(y_test, y_pred))\n",
+    "print(mean_squared_error(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": false
@@ -415,14 +465,14 @@
    "source": [
     "r2_results = []\n",
     "mse_results= []\n",
-    "kf_total = KFold(n_splits=50, shuffle=True, random_state=100)\n",
+    "kf_total = KFold(n_splits=20, shuffle=True, random_state=100)\n",
     "for train_index, test_index in kf_total.split(X):\n",
     "    x_tr, x_cv = X[train_index], X[test_index]\n",
     "    y_tr, y_cv = Y[train_index], Y[test_index]\n",
     "    T_train_xgb = xgb.DMatrix(x_tr, y_tr)\n",
-    "    params_1 = {\"booster\":\"gbtree\", \"objective\": \"reg:linear\", \"eta\":0.1, \"max_depth\":40,\"eval_metric\":\"rmse\"}\n",
-    "    gbm = xgb.train(dtrain=T_train_xgb,params=params)\n",
-    "    y_pr = gbm.predict(xgb.DMatrix(x_cv))\n",
+    "    params_2 = {\"booster\":\"gbtree\", \"objective\": \"reg:linear\", \"eta\":0.1, \"max_depth\":20,\"eval_metric\":\"rmse\", 'lambda': 1.5}\n",
+    "    gbm_p_2 = xgb.train(dtrain=T_train_xgb,params=params_2)\n",
+    "    y_pr = gbm_p_2.predict(xgb.DMatrix(x_cv))\n",
     "    r2_results.append(r2_score(y_cv, y_pr))\n",
     "    mse_results.append(mean_squared_error(y_cv, y_pr))\n",
     "print 'average_r2', np.average(r2_results)\n",
@@ -439,22 +489,9 @@
    },
    "outputs": [],
    "source": [
-    "r2_results = []\n",
-    "mse_results= []\n",
-    "kf_total = KFold(n_splits=50, shuffle=True, random_state=100)\n",
-    "for train_index, test_index in kf_total.split(X):\n",
-    "    x_tr, x_cv = X[train_index], X[test_index]\n",
-    "    y_tr, y_cv = Y[train_index], Y[test_index]\n",
-    "    T_train_xgb = xgb.DMatrix(x_tr, y_tr)\n",
-    "    params_1 = {\"booster\":\"gbtree\", \"objective\": \"reg:linear\", \"eta\":0.1, \"max_depth\":40,\"eval_metric\":\"rmse\"}\n",
-    "    gbm_12 = xgb.train(dtrain=T_train_xgb,params=params1)\n",
-    "    y_pr = gbm_12.predict(xgb.DMatrix(x_cv))\n",
-    "    r2_results.append(r2_score(y_cv, y_pr))\n",
-    "    mse_results.append(mean_squared_error(y_cv, y_pr))\n",
-    "print 'average_r2', np.average(r2_results)\n",
-    "print 'average_mse', np.average(mse_results)\n",
-    "print 'median_r2', np.median(r2_results)\n",
-    "print 'median_mse', np.median(mse_results)"
+    "y_pred = gbm_p_2.predict(xgb.DMatrix(X_test))\n",
+    "print(r2_score(y_test, y_pred))\n",
+    "print(mean_squared_error(y_test, y_pred))"
    ]
   },
   {
