--- a/dataset/xgboost_implementation_1.ipynb
+++ b/dataset/xgboost_implementation_1.ipynb
@@ -317,9 +317,9 @@
     "mse_results= []\n",
     "\n",
     "kf_total = KFold(n_splits=2, shuffle=True, random_state=100)\n",
-    "for train_index, test_index in kf_total.split(X):\n",
-    "    x_tr, x_cv = X[train_index], X[test_index]\n",
-    "    y_tr, y_cv = Y[train_index], Y[test_index]\n",
+    "for train_index, test_index in kf_total.split(X_train):\n",
+    "    x_tr, x_cv = X_train[train_index], X_train[test_index]\n",
+    "    y_tr, y_cv = y_train[train_index], y_train[test_index]\n",
     "    T_train_xgb = xgb.DMatrix(x_tr, y_tr)\n",
     "    params = {\"objective\": \"reg:linear\", \"booster\":\"gbtree\",\"max_depth\":60}\n",
     "    gbm = xgb.train(dtrain=T_train_xgb,params=params)\n",
@@ -418,9 +418,9 @@
     "r2_results = []\n",
     "mse_results= []\n",
     "kf_total = KFold(n_splits=20, shuffle=True, random_state=100)\n",
-    "for train_index, test_index in kf_total.split(X):\n",
-    "    x_tr, x_cv = X[train_index], X[test_index]\n",
-    "    y_tr, y_cv = Y[train_index], Y[test_index]\n",
+    "for train_index, test_index in kf_total.split(X_train):\n",
+    "    x_tr, x_cv = X_train[train_index], X_train[test_index]\n",
+    "    y_tr, y_cv = y_train[train_index], y_train[test_index]\n",
     "    T_train_xgb = xgb.DMatrix(x_tr, y_tr)\n",
     "    params_1 = {\"booster\":\"gbtree\", \"objective\": \"reg:linear\", \"eta\":0.1, \"max_depth\":40,\"eval_metric\":\"rmse\", 'lambda': 5}\n",
     "    gbm_p_1 = xgb.train(dtrain=T_train_xgb,params=params_1)\n",
@@ -457,18 +457,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "average_r2 0.622400401729\n",
+      "average_mse 6548.40322707\n",
+      "median_r2 0.623494533462\n",
+      "median_mse 6584.91467408\n"
+     ]
+    }
+   ],
    "source": [
     "r2_results = []\n",
     "mse_results= []\n",
     "kf_total = KFold(n_splits=20, shuffle=True, random_state=100)\n",
-    "for train_index, test_index in kf_total.split(X):\n",
-    "    x_tr, x_cv = X[train_index], X[test_index]\n",
-    "    y_tr, y_cv = Y[train_index], Y[test_index]\n",
+    "for train_index, test_index in kf_total.split(X_train):\n",
+    "    x_tr, x_cv = X_train[train_index], X_train[test_index]\n",
+    "    y_tr, y_cv = y_train[train_index], y_train[test_index]\n",
     "    T_train_xgb = xgb.DMatrix(x_tr, y_tr)\n",
     "    params_2 = {\"booster\":\"gbtree\", \"objective\": \"reg:linear\", \"eta\":0.1, \"max_depth\":20,\"eval_metric\":\"rmse\", 'lambda': 1.5}\n",
     "    gbm_p_2 = xgb.train(dtrain=T_train_xgb,params=params_2)\n",
@@ -483,15 +494,264 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.64548838622\n",
+      "6061.19907759\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = gbm_p_2.predict(xgb.DMatrix(X_test))\n",
+    "print(r2_score(y_test, y_pred))\n",
+    "print(mean_squared_error(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "average_r2 0.853752707929\n",
+      "average_mse 2547.76670546\n",
+      "median_r2 0.851616592089\n",
+      "median_mse 2493.81722666\n"
+     ]
+    }
+   ],
+   "source": [
+    "r2_results = []\n",
+    "mse_results= []\n",
+    "kf_total = KFold(n_splits=20, shuffle=True, random_state=100)\n",
+    "for train_index, test_index in kf_total.split(X_train):\n",
+    "    x_tr, x_cv = X_train[train_index], X_train[test_index]\n",
+    "    y_tr, y_cv = y_train[train_index], y_train[test_index]\n",
+    "    T_train_xgb = xgb.DMatrix(x_tr, y_tr)\n",
+    "    params_3 = {\"booster\":\"gbtree\", \"objective\": \"reg:linear\", \"max_depth\":60,\"eval_metric\":\"rmse\"}\n",
+    "    gbm_p_3 = xgb.train(dtrain=T_train_xgb,params=params_3)\n",
+    "    y_pr = gbm_p_3.predict(xgb.DMatrix(x_cv))\n",
+    "    r2_results.append(r2_score(y_cv, y_pr))\n",
+    "    mse_results.append(mean_squared_error(y_cv, y_pr))\n",
+    "print 'average_r2', np.average(r2_results)\n",
+    "print 'average_mse', np.average(mse_results)\n",
+    "print 'median_r2', np.median(r2_results)\n",
+    "print 'median_mse', np.median(mse_results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.851969030617\n",
+      "2530.93309274\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = gbm_p_3.predict(xgb.DMatrix(X_test))\n",
+    "print(r2_score(y_test, y_pred))\n",
+    "print(mean_squared_error(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "y_pred = gbm_p_2.predict(xgb.DMatrix(X_test))\n",
-    "print(r2_score(y_test, y_pred))\n",
-    "print(mean_squared_error(y_test, y_pred))"
+    "--------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df_1629 = df[df['shop_id'] == 1629]\n",
+    "df_58 = df[df['shop_id'] == 58]\n",
+    "df_1821 = df[df['shop_id'] == 1821]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "X_1629 = df_1629.values[:, 0:216]\n",
+    "Y_1629 = df_1629.values[:,216]\n",
+    "\n",
+    "X_train_1629, X_test_1629, y_train_1629, y_test_1629 = train_test_split(X_1629, Y_1629, test_size = 0.3, random_state = 100)\n",
+    "\n",
+    "X_1821 = df_1821.values[:, 0:216]\n",
+    "Y_1821 = df_1821.values[:,216]\n",
+    "\n",
+    "X_train_1821, X_test_1821, y_train_1821, y_test_1821 = train_test_split(X_1821, Y_1821, test_size = 0.3, random_state = 100)\n",
+    "\n",
+    "X_58 = df_58.values[:, 0:216]\n",
+    "Y_58 = df_58.values[:,216]\n",
+    "\n",
+    "X_train_58, X_test_58, y_train_58, y_test_58 = train_test_split(X_58, Y_58, test_size = 0.3, random_state = 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "average_r2 -1.03205257242\n",
+      "average_mse 338840.081131\n",
+      "median_r2 -0.956453193745\n",
+      "median_mse 329109.719358\n",
+      "\n",
+      "\n",
+      "average_r2 0.725254295506\n",
+      "average_mse 47241.7385058\n",
+      "median_r2 0.771807815201\n",
+      "median_mse 31640.9026126\n",
+      "\n",
+      "\n",
+      "average_r2 0.614243754972\n",
+      "average_mse 58428.3394604\n",
+      "median_r2 0.732862127377\n",
+      "median_mse 45311.4213972\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [1, 2, 3, 4, 5, 7, 9, 10]\n",
+    "e = [0.1, 0.3, 0.5]\n",
+    "d = [10, 20, 30, 40, 50, 60, 100]\n",
+    "\n",
+    "for i in e:\n",
+    "    r2_results = []\n",
+    "    mse_results= []\n",
+    "    kf_total = KFold(n_splits=20, shuffle=True, random_state=100)\n",
+    "    for train_index, test_index in kf_total.split(X_train_58):\n",
+    "        x_tr_58, x_cv_58 = X_train_58[train_index], X_train_58[test_index]\n",
+    "        y_tr_58, y_cv_58 = y_train_58[train_index], y_train_58[test_index]\n",
+    "        T_train_xgb = xgb.DMatrix(x_tr_58, y_tr_58)\n",
+    "        params58_3 = {\"booster\":\"gbtree\", \"objective\": \"reg:linear\", 'max_depth':20,\"eval_metric\":\"rmse\", \"eta\":0.3, 'lambda':4}\n",
+    "        gbm58_p_3 = xgb.train(dtrain=T_train_xgb,params=params58_3)\n",
+    "        y_pr = gbm58_p_3.predict(xgb.DMatrix(x_cv_58))\n",
+    "        r2_results.append(r2_score(y_cv_58, y_pr))\n",
+    "        mse_results.append(mean_squared_error(y_cv_58, y_pr))\n",
+    "    print 'average_r2', np.average(r2_results)\n",
+    "    print 'average_mse', np.average(mse_results)\n",
+    "    print 'median_r2', np.median(r2_results)\n",
+    "    print 'median_mse', np.median(mse_results)\n",
+    "    print \"\\n\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "average_r2 0.725254295506\n",
+      "average_mse 47241.7385058\n",
+      "median_r2 0.771807815201\n",
+      "median_mse 31640.9026126\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "r2_results = []\n",
+    "mse_results= []\n",
+    "kf_total = KFold(n_splits=20, shuffle=True, random_state=100)\n",
+    "for train_index, test_index in kf_total.split(X_train_58):\n",
+    "    x_tr_58, x_cv_58 = X_train_58[train_index], X_train_58[test_index]\n",
+    "    y_tr_58, y_cv_58 = y_train_58[train_index], y_train_58[test_index]\n",
+    "    T_train_xgb = xgb.DMatrix(x_tr_58, y_tr_58)\n",
+    "    params58_3 = {\"booster\":\"gbtree\", \"objective\": \"reg:linear\", 'max_depth':20,\"eval_metric\":\"rmse\", \"eta\":0.3, 'lambda':4}\n",
+    "    gbm58_p_3 = xgb.train(dtrain=T_train_xgb,params=params58_3)\n",
+    "    y_pr = gbm58_p_3.predict(xgb.DMatrix(x_cv_58))\n",
+    "    r2_results.append(r2_score(y_cv_58, y_pr))\n",
+    "    mse_results.append(mean_squared_error(y_cv_58, y_pr))\n",
+    "print 'average_r2', np.average(r2_results)\n",
+    "print 'average_mse', np.average(mse_results)\n",
+    "print 'median_r2', np.median(r2_results)\n",
+    "print 'median_mse', np.median(mse_results)\n",
+    "print \"\\n\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.806873469607\n",
+      "25887.2294966\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = gbm58_p_3.predict(xgb.DMatrix(X_test_58))\n",
+    "print(r2_score(y_test_58, y_pred))\n",
+    "print(mean_squared_error(y_test_58, y_pred))"
    ]
   },
   {
