--- a/dataset/FIles_preprocessing.ipynb
+++ b/dataset/FIles_preprocessing.ipynb
@@ -322,6 +322,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 32,
    "metadata": {
     "collapsed": false
